RESOLVED FIXED273377
[view-transitions] Assertion due to unbalanced begin/end transparency layers
https://bugs.webkit.org/show_bug.cgi?id=273377
Summary [view-transitions] Assertion due to unbalanced begin/end transparency layers
Darin Adler
Reported 2024-04-28 14:36:44 PDT
rdar://126279004 Assertion due to unbalanced begin/end transparency layers
Attachments
Darin Adler
Comment 1 2024-04-28 15:17:25 PDT
EWS
Comment 2 2024-04-28 19:12:08 PDT
Committed 278096@main (aaecbac76dbf): <https://commits.webkit.org/278096@main> Reviewed commits have been landed. Closing PR #27849 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.