[view-transitions] Assertion due to unbalanced begin/end transparency layers https://bugs.webkit.org/show_bug.cgi?id=273377 rdar://126279004

Reviewed by Matt Woodrow.

Transparency layers were being applied for render layers that we are not painting.

* LayoutTests/fast/css/view-transitions-nested-transparency-layers-expected.html: Added.
* LayoutTests/fast/css/view-transitions-nested-transparency-layers.html: Added.
* LayoutTests/fast/css/view-transitions-unbalanced-transparency-layers-assertion-expected.txt: Added.
* LayoutTests/fast/css/view-transitions-unbalanced-transparency-layers-assertion.html: Added.

* Source/WebCore/rendering/RenderLayer.cpp:
(WebCore::RenderLayer::transparentPaintingAncestor): Stop at root layer.
(WebCore::RenderLayer::beginTransparencyLayers): Pass LayerPaintingInfo in to transparentPaintingAncestor.
(WebCore::RenderLayer::paintLayerWithEffects): Stop at root layer.
* Source/WebCore/rendering/RenderLayer.h: Change private beginTransparencyLayers function to
take LayerPaintingInfo argument.

Canonical link: https://commits.webkit.org/278096@main